--- a/DentalAesthetics_Backend/pom.xml
+++ b/DentalAesthetics_Backend/pom.xml
@@ -48,6 +48,13 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Resend API -->
+        <dependency>
+            <groupId>com.resend</groupId>
+            <artifactId>resend-java</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+
 
         <!-- R2DBC SPI -->
         <dependency>
