--- a/aza_intranet_front/package.json
+++ b/aza_intranet_front/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "email": "email dev"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -21,6 +22,7 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.6",
+    "@react-email/components": "0.0.17",
     "antd": "^5.15.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
@@ -33,6 +35,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "2.1.2",
     "react-icons": "^5.0.1",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.1",
