--- a/DentalAesthetics_Backend/.gitignore
+++ b/DentalAesthetics_Backend/.gitignore
@@ -18,6 +18,9 @@ target/
 *.iws
 *.iml
 *.ipr
+*.properties
+*.cfg.xml
+qodana.yaml
 
 ### NetBeans ###
 /nbproject/private/
@@ -29,5 +32,18 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+
 ### VS Code ###
 .vscode/
+.env.local
+
+
+### TEMP ###
+/temp/
+/logs/
+/cache/
+
+### JAVASCRIPT ###
+/dist/
+/public/
+/node_modules/
