--- a/aza_intranet_front/package.json
+++ b/aza_intranet_front/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "datatables.net-dt": "^2.0.2",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "googleapis": "^134.0.0",
     "jquery": "^3.7.1",
