--- a/aza_intranet_front/package.json
+++ b/aza_intranet_front/package.json
@@ -9,7 +9,10 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "email": "email dev"
+    "email": "email dev",
+    "next_dev": "next dev",
+    "next_build": "next build",
+    "next_start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -33,6 +36,7 @@
     "jquery": "^3.7.1",
     "mobiscroll": "^3.0.0-beta6",
     "mui-datatables": "^4.3.0",
+    "next": "^14.2.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
