--- a/aza_intranet_front/package.json
+++ b/aza_intranet_front/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^5.0.1",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.1",
+    "resend": "^3.2.0",
     "sweetalert2": "^11.10.4",
     "yup": "^1.3.3"
   },
