--- a/aza_intranet_front/package.json
+++ b/aza_intranet_front/package.json
@@ -21,11 +21,15 @@
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
+    "@headlessui/react": "^2.0.3",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@mobiscroll/react-lite": "^4.10.9",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.6",
     "@react-email/components": "0.0.17",
+    "@remixicon/react": "^4.2.0",
+    "@tremor/react": "^3.16.2",
     "antd": "^5.15.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
@@ -49,13 +53,17 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.0.8"
   }
 }
