--- a/aza_intranet_front/package.json
+++ b/aza_intranet_front/package.json
@@ -15,6 +15,7 @@
     "next_start": "next start"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.1.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/daygrid": "^6.1.11",
@@ -64,6 +65,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-static-copy": "^1.0.4"
   }
 }
