--- a/aza_intranet_front/package.json
+++ b/aza_intranet_front/package.json
@@ -44,6 +44,7 @@
     "next": "^14.2.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-email": "2.1.2",
     "react-icons": "^5.0.1",
