--- a/aza_intranet_front/package.json
+++ b/aza_intranet_front/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ant-design/charts": "^2.1.1",
+    "@ant-design/icons": "^5.3.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/daygrid": "^6.1.11",
@@ -33,13 +34,6 @@
     "@tremor/react": "^3.16.2",
     "antd": "^5.15.1",
     "axios": "^1.6.7",
-    "bootstrap": "^5.3.2",
-    "datatables.net-dt": "^2.0.2",
-    "dotenv": "^16.4.5",
-    "formik": "^2.4.5",
-    "googleapis": "^134.0.0",
-    "jquery": "^3.7.1",
-    "mobiscroll": "^3.0.0-beta6",
     "mui-datatables": "^4.3.0",
     "next": "^14.2.3",
     "prop-types": "^15.8.1",
@@ -48,11 +42,8 @@
     "react-dom": "^18.2.0",
     "react-email": "2.1.2",
     "react-icons": "^5.0.1",
-    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.1",
-    "resend": "^3.2.0",
-    "sweetalert2": "^11.10.4",
-    "yup": "^1.3.3"
+    "sweetalert2": "^11.10.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
@@ -65,7 +56,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
     "vite": "^5.0.8",
     "vite-plugin-static-copy": "^1.0.4"
   }
